app/Connector/packages/connector-theme/sass/var/Component.scss
/* ... */
.x-grid-view {
  padding-bottom: 70px;
}

.inline {
  display: inline-block;
}

.learnheader {

  .titlepanel {
    font: $title-font;
    background: $gray-7;
    display: block;
    width:100%;
    height: 56px;
    line-height: 56px;
    padding-left: 16px;
    clear: all;
  }

  .breadcrumb {
    font-weight: 400;
    color: $gray-25;
    text-transform: uppercase;
    display: block;
    float: left;
    padding-right:4px;
  }

  .studyname {
    font-weight: 100;
    font-size: 22px;
    font-family: $data-font;
    color: $black;
    display: block;
    float: left;
  }

  .iarrow {
    background-image: url(images/navigatebackward.svg);
    background-repeat: no-repeat;
    background-color: $gray-8;
    width: 56px;
    height: 56px;
    margin: 0 16px 0 -16px;
    vertical-align: bottom;
    display: block;
    float: left;
  }

}




.header-container {

  .titlepanel {
    font: $title-font;
    background: $gray-7;
    display: block;
    width:100%;
    height: 56px;
    line-height: 56px;
    padding-left: 16px;
    clear: all;
  }

  margin: 0;
  padding: 0!important;
  &-slim {
    margin: 0;
  }
}

.iScroll {
  ::-webkit-scrollbar {
    width: 7px;
    height: 9px;
  }

  ::-webkit-scrollbar-button:start:decrement,
  ::-webkit-scrollbar-button:end:increment {
    display: block;
    height: 0;
    background-color: transparent;
  }

  ::-webkit-scrollbar-track-piece {
    -webkit-border-radius: 0;
    -webkit-border-bottom-right-radius: 4px;
    -webkit-border-bottom-left-radius: 4px;
  }

  ::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.3);
    -webkit-border-radius: 4px;
  }

  ::-webkit-scrollbar-thumb:vertical {
    height: 50px;
  }

  ::-webkit-scrollbar-thumb:horizontal {
    width: 50px;
  }
}

/* error messages */
.errormsg {
  font-size: 9pt;
  font-family : $info-font;
  color : $interactive-color;
}

div.emptytext {
  font: $body-one-font;
  color: $heat-scale-2;
}

/* This is a little weird that all of these selectors apply the same style, yet override later... */
.signin-content, .terms-of-use, .signin-right {
  padding: 25px;

  p {
    @include paragraphSpacing;
  }

  .logoContainer {
    margin-left: auto;
    margin-right: auto;
    width: 650px;

    img {
      height: 300px;
      width: 620px;
    }
  }
}

.#{$connector-prefix}tab-bar {
  display: none;
}

.#{$connector-prefix}border-layout-ct {
  background-color: $gray-7;
}

.#{$connector-prefix}form-item {
  font-family: $info-font;
}

.#{$connector-prefix}form-item-label-top {
  font-size: 12px;
}

.#{$connector-prefix}border-box textarea.#{$connector-prefix}form-field {
  padding: 7px;
}

.#{$connector-prefix}form-field, .#{$connector-prefix}form-display-field {
  font-family: $info-font;
}

/* Ext Mask */
.#{$connector-prefix}mask-msg {
  background-color: $heat-scale-3;
  border-color: $heat-scale-1;

  div {
    border: 1px solid transparent;
  }
}

.#{$connector-prefix}tip {
  border-color: $heat-scale-3;
  background-color: $heat-scale-4;
}

.#{$connector-prefix}tip-anchor {
  border-width: 12px;
  border-left-color: darken($gray-7, 10%);
}

.#{$connector-prefix}tip-anchor-left {
  border-left-color: transparent !important;
  border-right-color: darken($gray-7, 10%);
}

.#{$connector-prefix}mask {
  background-color: $black !important;
  opacity: .8 !important;
}

/* Ext Message Box */
.#{$connector-prefix}window-default,
.#{$connector-prefix}window-header-default-top {
  background-color: $gray-7;
}

.#{$connector-prefix}toolbar .#{$connector-prefix}toolbar-separator-horizontal {
  border-left: $heat-scale-3;
}

.#{$connector-prefix}btn-default-toolbar-small-over {
  background-image: none;
  border-color: $heat-scale-3;
  background-color: $heat-scale-4;
}

/* Role-based selectors */
.auto-scroll-y {
  overflow-y: auto;
  overflow-x: hidden;
}

.section-title {
  font: $headline-font;
}

.top-spacer {
  margin-top: 10px;

  &-sm {
    margin-top: 5px;
  }

  &-lg {
    margin-top: 20px;
  }

  &-xlg {
    margin-top: 40px;
  }
}

.left-spacer {
  margin-left: $pageLeftPadding;

  &-sm {
    margin-left: 13px;
  }


  &-lg {
    margin-left: 54px;
  }
}

.bottom-spacer {
  margin-bottom: 10px;

  &-sm {
    margin-bottom: 5px;
  }

  &-lg {
    margin-bottom: 20px;
  }
}

.x-css-shadow {
  @include prefixer(border-radius, 2px!important);
  @include prefixer(box-shadow, 0 1px 0 0 $gray-6!important);

}

/* Visualization Library */
.vis-bin-hexagon {
  fill: none;
  stroke: #000;
  stroke-width: .5px;
}

.vis-bin-square {
  fill: none;
  stroke: #FFF;
  stroke-width: .5px;
}

/* For the dropdowns, move to own scss */
.dropdown-container {
  border: 1px solid #D0D2D3;
  @include prefixer(border-radius, 2px);
  padding: 0 12px;
  height: 34px!important;
  line-height: 34px;
  margin: 28px;
  background-color: $white;

  &:hover { cursor: pointer; }

  label {
    display: block;
    line-height: 32px;
    height: 32px;
    margin-top: 0!important;
    font-size: 12px;
  }

  .dropdown-input {
    border: 0!important;
    background: none!important;
    font-family: $info-font;
    font-size: 12px;
    padding: 0 5px;
    line-height: 32px;
    height: 32px;
    color: $interactive-color;
    vertical-align: -webkit-baseline-middle;

    &:hover { cursor: pointer; }
  }

  span.parrow {
    width: 16px!important;
    height: 16px!important;
    padding: 0;
    border: 0;
    background-color: transparent;
    cursor: pointer;
    background-image: url(images/dropdown_normal.svg);
    float: right;
    position: absolute;
    right: 0;
    top: 8px;

    &:hover {
      background-image: url(images/dropdown_hover.svg);
    }
  }
}
/* ... */

